Use URL instead of URI to avoid parsing errors on non-encoded URLs.